--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ a:hover{
 }
 #footer {
 	position: absolute;
-	bottom: 0px;
+	bottom: -525px;
 	background-color: #f2f2f2; 
 	border-top: 1px solid #e4e4e4;
 	padding-bottom: 5px;
@@ -142,17 +142,18 @@ a:hover{
 }
 #google {
 	position: absolute;
-	top:775px;
-	left: 335px;
+	top:1275px;
+	left: 285px;
 }
 #next {
 	position: absolute;
-	top: 10px;
+	top: 27px;
 	left: 265px;
 }
 #g_big {
 	height: 50px;
 	width: 15px;
+	padding-bottom: 23px;
 }
 .o {
 	height: 25px;
@@ -171,5 +172,53 @@ a:hover{
 	color: #4285f4;
 }
 #google a:hover {
+	text-decoration: underline;
+}
+#content {
+	display: block;
+	color: #222;
+	position: relative;
+	float: left;
+	margin: 165px 100px 20px 137px;
+}
+.site{
+	margin: 25px;
+}
+.name a{
+	color: #1a0dab;
+	font-size: 18px;
+}
+.href {
+	color: #006621;
+	line-height: 16px;
+	font-size: 14px;
+}
+.text {
+	font-size: small;
+	line-height: 1.4;
+	width: 600px;
+	margin-top: 5px;
+}
+.name a:hover{
+	text-decoration: underline;
+}
+#dop_poisk {
+	position: absolute;
+	top:1000px;
+	left: 160px;
+}
+
+#dop_poisk  li:first-child{
+	color: black;
+	font-size: 18px;
+}
+#dop_poisk li a{
+	display: block;
+	color: #1a0dab;
+	font-size: 14px;
+	font-weight: bold;
+	padding-bottom: 8px;
+}
+#dop_poisk a:hover{
 	text-decoration: underline;
 }
